# qres_marl

./: .gitignore  Dockerfile  LICENSE  README.md  conda_env.yml  conda_env_lx.yml  docker_conda_env.yml  dummy.py  dummy.sh  psha.qgz  replace_null_values.py  setup_conda_env.sh
imprl-infinite-horizon/: pyproject.toml
imprl-infinite-horizon/examples/: inference.ipynb  inference.py  test.py  train.py  train_and_log.py  train_and_log_parallel.py
imprl-infinite-horizon/imprl/agents/: DCMAC.py  DDMAC.py  DDQN.py  IAC.py  IACC.py  IACC_PS.py  IAC_PS.py  JAC.py  QMIX_PS.py  VDN_PS.py
imprl-infinite-horizon/imprl/agents/configs/: QMIX_PS.yaml  VDN_PS.yaml  get_config.py
imprl-infinite-horizon/imprl/agents/primitives/: MultiAgentActors.py  PG_agent.py  Value_agent.py  agent.py
imprl-infinite-horizon/imprl/baselines/: TPI_CBM.py  do_nothing.py  failure_replace.py  random.py
imprl-infinite-horizon/imprl/envs/: __init__.py
imprl-infinite-horizon/imprl/envs/game_envs/: baselines.yaml  multi_agent_wrapper.py  single_agent_wrapper.py
imprl-infinite-horizon/imprl/envs/game_envs/env_configs/: 1-of-2_game.yaml  1-of-3_game.yaml  (+3 more)
imprl-infinite-horizon/imprl/envs/structural_envs/: baselines.yaml  k_out_of_n.py  k_out_of_n_infinite.py  k_out_of_n_v3.py  multi_agent_wrapper.py  single_agent_wrapper.py
imprl-infinite-horizon/imprl/post_process/: inference.py
imprl-infinite-horizon/imprl/post_process/plotter/: rollout_plotter.py
imprl-infinite-horizon/imprl/runners/: parallel.py  serial.py
imprl-infinite-horizon/tests/: test_env.py  test_heuristics.py  test_train.py
(+249 files in other folders)
